1)added background image and gradient; 2)implemented "add row on key Enter pressed" functionality 3) added "change image on mouseover and on mouseout"

--- a/toDo_List.css
+++ b/toDo_List.css
@@ -1,9 +1,23 @@
-body{
+body {
 	background-color: ff99ff;
+  /* IE10 Consumer Preview */ 
+  	background-image: -ms-linear-gradient(left, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
+  /* Mozilla Firefox */ 
+  	background-image: -moz-linear-gradient(left, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
+  /* Opera */ 
+  	background-image: -o-linear-gradient(left, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
+  	 /* Webkit (Safari/Chrome 10) */ 
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #FF1975), color-stop(0.4, #FF99FF), color-stop(0.6, #FF99FF), color-stop(1, #FF1975));
+  /* Webkit (Chrome 11+) */ 
+  background-image: -webkit-linear-gradient(left, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
+  /* W3C Markup, IE10 Release Preview */ 
+  background-image: linear-gradient(to right, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
 }
+
 #name
 {
 	border: none;
+	width: 600px;
 	background-color: ff1975;
 	background: linear-gradient(to bottom, ff99ff, ff1975);
 	color: #FFFFFF;
@@ -17,13 +31,18 @@ body{
 #wrap
 {
 	margin: auto;
-	width:600px;
+	width: 950px;
+	height: 90%;
+	overflow: auto;
+	margin-bottom: 20px;
 	text-align: center;
+	background: url(flower_left.png) bottom left no-repeat, url(flower_right.png) bottom right no-repeat;
 }
 #formochka{
 	background-color: ff5e9e;
 	background: linear-gradient(to bottom, ff99ff, ff5e9e);
 	border-radius: 6px;
+	width: 600px;
 	padding: 10 20 10 20;
 	margin: 20 auto 20 auto;
 	
@@ -32,7 +51,7 @@ body{
 {
 	background-color: ffcfe2;
 	background: linear-gradient(to bottom, ff99ff, ffcfe2);
-
+	width: 600px;
 	border-radius: 6px;
 	padding: 10 20 10 20;
 	margin: 20 auto 20 auto;
@@ -44,14 +63,34 @@ body{
 	
 	
 }
-.kartynka{
+.row
+{
+	width: 600px;
+	background: #FFCFE2;
+ 	width: 600px;
+ 	height: 50px;
+  	margin-top: 20px;
+  	margin-left: auto;
+  	margin-right: auto;
+  	line-height: 50px;
+  	text-align: left;
+  	font-size: 24px;
+  	color: #FF1975;
+  	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00FF99FF', endColorstr='#FFFFCFE2');
+  	background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 153, 255, 0)), to(rgba(255, 207, 226, 1)));
+  	background: -moz-linear-gradient(top, rgba(255, 153, 255, 0), rgba(255, 207, 226, 1));	
+	
+}
+.kartynka, .image-hover
+{
     width: 30;
 	height: 30;
 	float: right;
-	
+	cursor: hand;
 
 }
-#leftFlower{
+
+/*#leftFlower{
 		position: fixed;
 		left: 200px;
 		top: 300px;
@@ -60,6 +99,16 @@ body{
 #rightFlower{
 		position: fixed;
 		right: 200px;
-		top: 300px;
+		top: 300px; */
 	
+}
+#knopka{
+	cursor: hand; 
+	
+}
+
+.row:hover {
+	box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
+	-moz-box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
+	-webkit-box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
 }
