--- a/toDo_List.css
+++ b/toDo_List.css
@@ -1,4 +1,5 @@
-body {
+body 
+{
 	background-color: ff99ff;
   /* IE10 Consumer Preview */ 
   	background-image: -ms-linear-gradient(left, #FF1975 0%, #FF99FF 40%, #FF99FF 60%, #FF1975 100%);
@@ -28,6 +29,7 @@ body {
 	margin: 30 auto 40 auto;
 	padding: 20 30 20 30;
 }
+
 #wrap
 {
 	margin: auto;
@@ -38,15 +40,17 @@ body {
 	text-align: center;
 	background: url(flower_left.png) bottom left no-repeat, url(flower_right.png) bottom right no-repeat;
 }
-#formochka{
+
+#formochka
+{
 	background-color: ff5e9e;
 	background: linear-gradient(to bottom, ff99ff, ff5e9e);
 	border-radius: 6px;
 	width: 600px;
 	padding: 10 20 10 20;
 	margin: 20 auto 20 auto;
-	
 }
+
 .newText
 {
 	background-color: ffcfe2;
@@ -60,9 +64,8 @@ body {
 	font-weight: bold;
 	text-align: left;
 	height: 40px;
-	
-	
 }
+
 .row
 {
 	width: 600px;
@@ -79,15 +82,14 @@ body {
   	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00FF99FF', endColorstr='#FFFFCFE2');
   	background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 153, 255, 0)), to(rgba(255, 207, 226, 1)));
   	background: -moz-linear-gradient(top, rgba(255, 153, 255, 0), rgba(255, 207, 226, 1));	
-	
 }
-.kartynka, .image-hover
+
+.kartynka, .image-hover, .image-unhover
 {
-    width: 30;
-	height: 30;
+    width: 30px;
+	height: 30px;
 	float: right;
 	cursor: hand;
-
 }
 
 /*#leftFlower{
@@ -102,13 +104,23 @@ body {
 		top: 300px; */
 	
 }
-#knopka{
+#knopka
+{
 	cursor: hand; 
-	
 }
 
-.row:hover {
+.newText:hover 
+{
 	box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
 	-moz-box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
 	-webkit-box-shadow: 0 0 30px rgba(255, 255, 255, 0.7);
+}
+
+.image-hover
+{
+	
+	border-radius: 6px;	
+	width: 45px;
+	height: 45px;
+	
 }
